--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,10 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+MYAPP_UPLOAD_STORE_FILE=MyDoctor.keystore
+MYAPP_UPLOAD_KEY_ALIAS=MyDoctor
+MYAPP_UPLOAD_STORE_PASSWORD=pondokIT
+MYAPP_UPLOAD_KEY_PASSWORD=pondokIT
+
+org.gradle.jvmargs=-Xmx4608M
